# anomaly_detector_sr

./: .gitignore  Cargo.toml  LICENSE  README.md
drawer/: main.py  pyproject.toml
src/: main.rs
