[package]
name = "anomaly_detector"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
approx = "0.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
rustfft = "6.2.0"
serde = { version = "1.0.215", features = ["derive"] }
